k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charging-stations-ms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: charging-stations-ms
  template:
    metadata:
      labels:
        app: charging-stations-ms
    spec:
      containers:
        - image: anzx10/charging-stations-microservice:v3.0
          name: charging-stations-ms
          ports:
            - containerPort: 80
              name: server
              protocol: TCP
          imagePullPolicy: Always
          # livenessProbe:
          #   httpGet:
          #     path: /health/live
          #     port: server
          #   initialDelaySeconds: 30
          #   periodSeconds: 3
          # readinessProbe:
          #   httpGet:
          #     path: /health/ready
          #     port: server
          #   initialDelaySeconds: 30
          #   periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: charging-stations-ms
spec:
  type: LoadBalancer
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: charging-stations-ms
