k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 #/charging-stations-ms/v1/ChargingStations
spec:
  rules:
    - http:
        paths:
          - path: /charging-stations-ms(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: charging-stations-ms
                port:
                  number: 80
          - path: /reservations-ms(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: reservations-ms
                port:
                  number: 80
          - path: /comments-ms(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: comments-ms
                port:
                  number: 80
